--- a/config
+++ b/config
@@ -2,4 +2,6 @@ export MYSQL_ROOT_PASSWORD="cxyy.ejhz.zenc.trxp.zezm.dfxe.ryyh.pncf"
 export MYSQL_USER=user
 export MYSQL_PASSWORD="phnz.jcnf.xmmd.nafp.xwna.rwfa.hfzn.cjpn"
 export MYSQL_DATABASE="starting"
+export DANS_PASSWORD="&^8xX"
+
 
